# metamcp-tools

./: .gitignore  CONTRIBUTORS.txt  README.md  config.example.toml  pyproject.toml  server.py
.github/workflows/: ci.yml
conf.d/examples/: README.md  context7.toml  fetch.toml  filesystem_readonly.toml  oneseq_bridge.toml  playwright.toml  sqlite_readonly.toml
src/metamcp_tools/: __init__.py  cache.py  child.py  config.py  rpc.py  security.py  server.py  types.py
tests/: fake_child_mcp.py  test_gateway.py
